fixed focal mech summary and forecast, added classes to mat-tables

--- a/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
+++ b/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
@@ -3,7 +3,8 @@
   <h2>Focal Mechanism</h2>
 
   <div class="horizontal-scrolling">
-    <mat-table [dataSource]="this.tensors">
+    <mat-table [dataSource]="this.tensors"
+      class="fc-summary-table">
       <mat-header-row *matHeaderRowDef="this.columnsToDisplay">
 
       </mat-header-row>
