--- a/src/app/oaf/forecast/forecast.component.html
+++ b/src/app/oaf/forecast/forecast.component.html
@@ -13,43 +13,44 @@
     The likely number of aftershocks (N) and the probability of at least one
     aftershock occurring (P) with at least magnitude (M) and within the given
     time frame starting from
-        {{ forecast.columns[0].timeStart | sharedDateTime }}.
+    {{ forecast.columns[0].timeStart | sharedDateTime }}.
   </P>
 
   <div class="horizontal-scrolling">
-    <mat-table *ngIf="forecast" [dataSource]="forecast.rows">
-        <mat-header-row *matHeaderRowDef="forecast.columnIds"></mat-header-row>
-        <mat-row *matRowDef="let myRowData; columns: forecast.columnIds">
-        </mat-row>
+    <mat-table *ngIf="forecast"
+      [dataSource]="forecast.rows"
+      class="fc-table">
+      <mat-header-row *matHeaderRowDef="forecast.columnIds"></mat-header-row>
+      <mat-row *matRowDef="let myRowData; columns: forecast.columnIds">
+      </mat-row>
 
-        <ng-container matColumnDef="magnitude">
-          <mat-header-cell *matHeaderCellDef></mat-header-cell>
-          <mat-cell *matCellDef="let row">
-              M ≥ {{ row.magnitude }}
-          </mat-cell>
-        </ng-container>
+      <ng-container matColumnDef="magnitude">
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+        <mat-cell *matCellDef="let row">
+          M ≥ {{ row.magnitude }}
+        </mat-cell>
+      </ng-container>
 
-        <ng-container
-            *ngFor="let column of forecast.columns;trackBy: trackByIndex"
-            [matColumnDef]="column.id">
-          <mat-header-cell *matHeaderCellDef>
-            {{ column.label }}
-          </mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            <ng-container *ngIf="row.data[column.id]; let bin">
-              <span class="oafColumn">N:</span>
-              <ng-container *ngIf="bin.p95maximum !== 0 ; else asterisk">
-                  {{ bin.p95minimum | sharedRoundDown: 2 | sharedNumberWithSeparator }} to
-                      {{ bin.p95maximum | sharedRoundUp: 2 | sharedNumberWithSeparator }}
-              </ng-container>
-              <br />
-              <span class="oafColumn">P:</span> {{ bin.probability | oafPercent }}
+      <ng-container *ngFor="let column of forecast.columns;trackBy: trackByIndex"
+        [matColumnDef]="column.id">
+        <mat-header-cell *matHeaderCellDef>
+          {{ column.label }}
+        </mat-header-cell>
+        <mat-cell *matCellDef="let row">
+          <ng-container *ngIf="row.data[column.id]; let bin">
+            <span class="oafColumn">N:</span>
+            <ng-container *ngIf="bin.p95maximum !== 0 ; else asterisk">
+              {{ bin.p95minimum | sharedRoundDown: 2 | sharedNumberWithSeparator }} to
+              {{ bin.p95maximum | sharedRoundUp: 2 | sharedNumberWithSeparator }}
             </ng-container>
-            <ng-template #asterisk>
-                *
-            </ng-template>
-          </mat-cell>
-        </ng-container>
+            <br />
+            <span class="oafColumn">P:</span> {{ bin.probability | oafPercent }}
+          </ng-container>
+          <ng-template #asterisk>
+            *
+          </ng-template>
+        </mat-cell>
+      </ng-container>
     </mat-table>
     <small>
       * Earthquake possible but with a low probability.
