--- a/src/app/shared/map-control/legend-control.scss
+++ b/src/app/shared/map-control/legend-control.scss
@@ -22,12 +22,15 @@
   float: right;
 }
 
-.legend-container > img {
+.legend-container img {
   display: block;
-  max-width: 210px;
+  width: 210px;
 }
 
 .leaflet-control-legend-visible {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   padding: 6px;
 
   > .leaflet-control-legend-hide,
