Using new cooperator pipe.

--- a/src/app/event-page/event-page/event-page.component.html
+++ b/src/app/event-page/event-page/event-page.component.html
@@ -1,10 +1,11 @@
 <ng-container *ngIf="this?.eventService?.event$ | async;
     else noEvent; let event">
-  <hazdev-template>
+  <hazdev-template [COOPERATOR]="this.contributorService.contributors$ | async | cooperator:event">
     <event-page-header [event]="event"></event-page-header>
 
     <mat-nav-list templateSideNavigation>
-      <event-page-navigation class="site-sectionnav" [event]="event"></event-page-navigation>
+      <event-page-navigation class="site-sectionnav"
+        [event]="event"></event-page-navigation>
     </mat-nav-list>
 
     <ng-container *ngIf="!event?.deleted; else deletedEvent">
@@ -18,12 +19,14 @@
       </p>
 
       <shared-text-product *ngFor="let product of event?.getProducts('deleted-text');
-            trackBy: trackByIndex" [product]="product">
+            trackBy: trackByIndex"
+        [product]="product">
       </shared-text-product>
     </ng-template>
 
 
-    <event-page-footer [event]="event" [contributors]="this?.contributorService?.contributors$ | async"></event-page-footer>
+    <event-page-footer [event]="event"
+      [contributors]="this?.contributorService?.contributors$ | async"></event-page-footer>
   </hazdev-template>
 </ng-container>
 
