--- a/src/app/oaf/forecast/forecast.component.html
+++ b/src/app/oaf/forecast/forecast.component.html
@@ -57,7 +57,7 @@
       </ng-container>
     </mat-table>
     <small>
-      * Earthquake possible but with a low probability.<br>
+      * Earthquake possible but with a low probability.<br />
       Likely number of aftershocks (N) is the 95% confidence range.
     </small>
   </div>
