--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
-  <shared-text-product
-      *ngFor="let product of event.getProducts('general-header');
-          trackBy: trackByIndex" [product]="product">
+  <shared-text-product *ngFor="let product of event.getProducts('general-header');
+          trackBy: trackByIndex"
+    [product]="product">
   </shared-text-product>
 
   <ul class="pins">
@@ -73,15 +73,15 @@
     </li>
 
     <li *ngIf="event | nearbySeismicityLink: 'nearby'; let link">
-      <executive-nearby-seismicity-pin [event]="event" [link]="link">
+      <executive-nearby-seismicity-pin [event]="event"
+        [link]="link">
       </executive-nearby-seismicity-pin>
     </li>
   </ul>
 
-  <shared-text-product
-      *ngFor="let product of event.getProducts('general-text');
+  <shared-text-product *ngFor="let product of event.getProducts('general-text');
           trackBy: trackByIndex"
-      [product]="product">
+    [product]="product">
   </shared-text-product>
 
   <ng-container *ngIf="event.hasProducts('general-link')">
