removed shardProductProperties from logic and updated logic so use slip.png

--- a/src/app/finite-fault/finite-fault/finite-fault.component.html
+++ b/src/app/finite-fault/finite-fault/finite-fault.component.html
@@ -74,7 +74,7 @@
     <figure *ngIf="product |
         sharedProductContent
           :'slip.png'
-          :('web/' + product | sharedProductProperty:'eventsourcecode' +
+          :('web/' + product?.properties?.eventsourcecode +
           '_slip2.png')
           as content">
       <img src="{{ content.url }}"
@@ -94,7 +94,7 @@
     <figure *ngIf="product |
         sharedProductContent
           :'basemap.png'
-          :('web/' + product | sharedProductProperty:'eventsourcecode' +
+          :('web/' + product?.properties?.eventsourcecode +
           '_basemap.png')
           as content">
       <img src="{{ content.url }}"
