--- a/src/app/executive/finite-fault-pin/finite-fault-pin.component.html
+++ b/src/app/executive/finite-fault-pin/finite-fault-pin.component.html
@@ -1,14 +1,14 @@
-<basic-pin
-    [link]="link"
-    [product]="product"
-    [title]="title">
+<basic-pin [link]="link"
+  [product]="product"
+  [title]="title">
 
   <figure *ngIf="product |
       sharedProductContent
-          :'cross-section.png'
+          :'slip.png'
           :('web/' + product?.properties?.eventsourcecode + '_slip2.png');
       let content; else noContent">
-    <img src="{{ content.url }}" alt="Cross-section of slip distribution"/>
+    <img src="{{ content.url }}"
+      alt="Cross-section of slip distribution" />
     <figcaption>
       Cross-section of slip distribution.
     </figcaption>
