switched to a strong tag

--- a/src/app/ground-failure/ground-failure/ground-failure.component.html
+++ b/src/app/ground-failure/ground-failure/ground-failure.component.html
@@ -39,9 +39,10 @@
   <ng-container *ngIf="eventService.product$ | async as product"
     footer>
     <p>
-      Due to local factors and model limitations, <b>ground failure may still
-        occur when alert levels indicate little to no hazard.</b> Refer to <a
-        href="/data/ground-failure/background.php">Ground Failure Background</a>
+      Due to local factors and model limitations, <strong>ground failure may
+        still
+        occur when alert levels indicate little to no hazard.</strong> Refer to
+      <a href="/data/ground-failure/background.php">Ground Failure Background</a>
       for more information.
     </p>
     <p>
