set showVersion to true

--- a/src/app/ground-failure/ground-failure/ground-failure.component.html
+++ b/src/app/ground-failure/ground-failure/ground-failure.component.html
@@ -1,5 +1,6 @@
 <!-- productType attribute defines type of product to load -->
-<product-page productType="ground-failure">
+<product-page productType="ground-failure"
+  [showVersion]="true">
 
   <!-- container with header attribute is added before attribution -->
   <ng-container header>
