set showVersion to true

--- a/src/app/shakemap/shakemap/shakemap.component.html
+++ b/src/app/shakemap/shakemap/shakemap.component.html
@@ -1,5 +1,6 @@
 <!-- productType attribute defines type of product to load -->
-<product-page productType="shakemap">
+<product-page productType="shakemap"
+  [showVersion]="true">
 
   <!-- container with header attribute is added before attribution -->
   <ng-container header>
