Modified hazard text for different types/alerts. Not clever, more simple.

--- a/src/app/ground-failure/hazard-alert/hazard-alert.component.html
+++ b/src/app/ground-failure/hazard-alert/hazard-alert.component.html
@@ -1,46 +1,64 @@
 <h4>{{ title }}</h4>
 
 <figure>
-  <ground-failure-alert-bar
-    [bins]="(type === 'landslide' ? landslideBins : liquefactionBins)"
+  <ground-failure-alert-bar [bins]="(type === 'landslide' ? landslideBins : liquefactionBins)"
     [title]="title"
     [units]="units"
     [value]="value">
   </ground-failure-alert-bar>
 
   <figcaption [ngSwitch]="alert">
-    <ng-container
-        *ngIf="
-          type === 'landslide'
-          ? {
-            none: 'landsliding',
-            label: 'Landslides',
-            verb: 'are'
-          }
-          : {
-            none: 'liquefaction',
-            label: 'Liquefaction',
-            verb: 'is'
-          }; let locals">
-
+    <!-- Landslides -->
+    <ng-container *ngIf="type === 'landslide'">
       <ng-container *ngSwitchCase="'green'">
-        Little to no {{ locals.none }} is expected,
-        but could still have occurred in highly susceptible areas.
+        Little or no landsliding is expected, but some
+        landslides could have occurred in highly
+        susceptible areas.
       </ng-container>
 
       <ng-container *ngSwitchCase="'yellow'">
-        {{ locals.label }} triggered by this earthquake {{ locals.verb }}
-        estimated to be limited in number and (or) spatial extent.
+        Landslides triggered by this earthquake are
+        estimated to be limited in number and (or)
+        spatial extent.
       </ng-container>
 
       <ng-container *ngSwitchCase="'orange'">
-        {{ locals.label }} triggered by this earthquake {{ locals.verb }}
-        estimated to be significant in number and (or) spatial extent.
+        Landslides triggered by this earthquake are
+        estimated to be significant in number and (or)
+        spatial extent.
       </ng-container>
 
       <ng-container *ngSwitchCase="'red'">
-        {{ locals.label }} triggered by this earthquake {{ locals.verb }}
-        estimated to be extremely large in number and (or) spatially extensive.
+        Landslides triggered by this earthquake are
+        estimated to be extensive in number and (or)
+        spatial extent.
+      </ng-container>
+    </ng-container>
+
+    <!-- Liquefaction -->
+    <ng-container *ngIf="type === 'liquefaction'">
+      <ng-container *ngSwitchCase="'green'">
+        Little or no liquefaction is expected, but some
+        liquefaction could have occurred in highly
+        susceptible areas.
+      </ng-container>
+
+      <ng-container *ngSwitchCase="'yellow'">
+        Liquefaction triggered by this earthquake is
+        estimated to be limited in severity and (or)
+        spatial extent.
+      </ng-container>
+
+      <ng-container *ngSwitchCase="'orange'">
+        Liquefaction triggered by this earthquake is
+        estimated to be significant in severity and (or)
+        spatial extent.
+      </ng-container>
+
+      <ng-container *ngSwitchCase="'red'">
+        Liquefaction triggered by this earthquake is
+        estimated to be extensive in severity and (or)
+        spatial extent.
       </ng-container>
     </ng-container>
   </figcaption>
