--- a/src/app/ground-failure/ground-failure/ground-failure.component.html
+++ b/src/app/ground-failure/ground-failure/ground-failure.component.html
@@ -41,32 +41,24 @@
     footer>
     <p>
       Due to local factors and model limitations, <strong>ground failure may
-        still
-        occur when alert levels indicate little to no hazard.</strong> Refer to
-      <a href="/data/ground-failure/background.php">Ground Failure Background</a>
-      for more information.
+        still occur when alert levels indicate little to no hazard.</strong>
+      Refer to <a href="/data/ground-failure/background.php">Ground Failure
+        Background</a> for more information.
     </p>
     <p>
-      Results are based on ground-motion estimates from the current
-
-      <ng-container *ngIf="product?.properties &&
-          (product.properties['rupture-warning'] | uppercase) !== 'FALSE';
-          else noPointSource">
-        <a [routerLink]="'./shakemap'">ShakeMap</a> (point source).
-        The extent of shaking and ground-failure estimates generally improve
-        as more details are incorporated into ShakeMap.
+      Results are based on ground-motion estimates from
+      <a [routerLink]="'../shakemap'">ShakeMap</a> version
+      {{
+      product | sharedProductProperty:'shakemap-version'
+      }}<ng-container *ngIf="product | pointSource;">(point source)</ng-container>.
+      The extent of shaking and ground-failure estimates generally improve as
+      more details are incorporated into ShakeMap.
+      <ng-container *ngIf="product | pointSource">
         ShakeMap is currently approximating this earthquake as a
         point source, and the mapped extent of ground failure commonly
         changes significantly when a fault model is added, especially for
         larger earthquakes.
       </ng-container>
-
-      <ng-template #noPointSource>
-        <a [routerLink]="'./shakemap'">ShakeMap</a>.
-        The extent of shaking and ground-failure estimates generally improve
-        as more details are incorporated into ShakeMap.
-      </ng-template>
     </p>
   </ng-container>
-
 </product-page>
